--- a/Laboratorio_8_y_9.ipynb
+++ b/Laboratorio_8_y_9.ipynb
@@ -33,7 +33,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sara Zavala Amado Garcia "
+    "## Sara Zavala 18893\n",
+    "## Amado Garcia 181469"
    ]
   },
   {
